syntax = "proto3";
package feeabstraction.absfee.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "feeabstraction/absfee/v1beta1/params.proto";
import "feeabstraction/absfee/v1beta1/epoch.proto";

option go_package = "github.com/notional-labs/feeabstraction/v1/x/feeabs/types";


// Params defines the parameters for the feeabs module.
message GenesisState {
    Params params = 1
        [ (gogoproto.moretags) = "yaml:\"params\"" ];

    repeated EpochInfo epochs = 2 
        [ (gogoproto.nullable) = false ];
  }
  